<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <CheckBox
            android:text="@string/py"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox6"
            tools:ignore="MissingConstraints,NotSibling"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/group"
            android:layout_marginRight="40dp" android:layout_marginEnd="40dp"/>
    <CheckBox
            android:text="@string/cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox4"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="66dp" android:layout_marginRight="66dp"/>
    <CheckBox
            android:text="@string/go"
            android:layout_width="97dp"
            android:layout_height="30dp" android:id="@+id/checkBox5"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"/>
    <Button
            android:text="Enviar"
            android:layout_width="0dp"
            android:layout_height="37dp" android:id="@+id/btnEnviar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="42dp" app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:onClick="valid"/>
    <Button
            android:text="Limpiar"
            android:layout_width="0dp"
            android:layout_height="37dp" android:id="@+id/btnLimpiar"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/btnEnviar" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="42dp" android:onClick="ClearAll"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/last_name"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtName"/>
    <TextView
            android:text="Genero:"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido" android:layout_marginEnd="296dp"
            android:layout_marginRight="296dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Nacimiento:"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="Le gusta programar?"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="Lenguaje:"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/lbLenguaje"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Spinner
            android:layout_width="222dp"
            android:layout_height="26dp" android:id="@+id/cbxGenero"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido"/>


    <CheckBox
            android:text="@string/jar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            tools:ignore="MissingConstraints,NotSibling"
            android:layout_marginLeft="75dp" android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/lbLenguaje"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/group"/>
    <CheckBox
            android:text="@string/cpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox3"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="152dp"
            android:layout_marginStart="152dp"/>
    <CheckBox
            android:text="@string/js"
            android:layout_width="81dp"
            android:layout_height="30dp" android:id="@+id/checkBox2"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="152dp"
            android:layout_marginStart="152dp"/>
    <TextView
            android:layout_width="189dp"
            android:layout_height="25dp" android:id="@+id/txtfecha"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cbxGenero" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="115dp" android:layout_marginStart="115dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:hint="@string/date"/>


    <RadioGroup
            android:layout_width="122dp"
            android:layout_height="46dp" tools:ignore="MissingConstraints"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtfecha" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginEnd="67dp" android:layout_marginRight="67dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/group">


        <RadioButton
                android:text="Si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbnSi"
                tools:ignore="MissingConstraints"
                android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/txtfecha"
                app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginLeft="60dp"
                android:layout_marginStart="6dp"
                android:checked="true"/>
        <RadioButton
                android:text="No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbnNo"
                tools:ignore="MissingConstraints"
                android:layout_marginTop="-31dp"

                app:layout_constraintTop_toBottomOf="@+id/txtfecha" app:layout_constraintStart_toEndOf="@+id/rbnSi"
                android:layout_marginLeft="60dp" android:layout_marginStart="60dp"/>


    </RadioGroup>















</androidx.constraintlayout.widget.ConstraintLayout>